# AIPowerPlus

./: AIPowerPLus.py  CMakeLists.txt  README.md  VERSION.md  appcommands.cpp  appcommands.h  appcommunication.cpp  appcommunication.h  appconfiguration.cpp  appconfiguration.h  applang.cpp  applang.h  appmultimedia.cpp  appmultimedia.h  appsettings.cpp  appsettings.h  leconfig.py  lehandler.py  lelang.py  lesettings.py  mainwindow.cpp  mainwindow.h  resources.qrc
binary_archives/: README.md
resources/: icon.rc
source_code_20240809/: AIPowerPLus.py  leconfig.py  lehandler.py  lelang.py  lesettings.py
